Added small CSS features and press enter to search feature

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 </span>
             </div>
         </div>
-        <div>
-            <ul class="list-unstyled" id="output">
 
-            </ul>
-        </div>
+            <div class="panel panel-default" id="output">
+
+            </div>
+
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
